Reset the application bundle identifier between test runs https://bugs.webkit.org/show_bug.cgi?id=206858 <rdar://problem/58844002>

Reviewed by Per Arne Vollan.

Clear the application bundle identifier set during testing when resetting the test system
to a known state in preparation for the next run.

Source/WebCore:

Tests: fast/sandbox/ios/sandbox-mach-lookup.html, fast/sandbox/ios/sandbox-mach-lookup-mail.html

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::clearApplicationBundleIdentifierTestingOverride): Added.

Source/WebKit:

Tests: fast/sandbox/ios/sandbox-mach-lookup.html, fast/sandbox/ios/sandbox-mach-lookup-mail.html

* UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:
* UIProcess/API/Cocoa/WKWebViewTesting.mm:
(+[WKWebView _clearApplicationBundleIdentifierTestingOverride]): Added.

Tools:

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues): Clear any override for the application
bundle identifier before the next test invocation.
* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::setApplicationBundleIdentifier): Correct an over-release caused by assigning
an autorelease return value to an NSRetainPtr.
(WTR::TestController::clearApplicationBundleIdentifierTestingOverride): Added.


Canonical link: https://commits.webkit.org/219912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255271 268f45cc-cd09-0410-ab3c-d52691b4dbfc